Fix position for paragraph in tab footer
- Disable extra padding and margin for correct alignment
  of the paragraph containing the copyright information
- The commented-out padding and margin will be needed again
  when the second paragraph containing the social link
  images will be ready for display.

--- a/src/sass/modules/_info.scss
+++ b/src/sass/modules/_info.scss
@@ -54,8 +54,8 @@
       margin-top: 5px;
     }
     p {
-      margin-top: 25px;
-      padding-top: 5px;
+      //margin-top: 25px;
+      //padding-top: 5px;
     }
     .social-links {
       border-bottom: 16px solid $white;
